--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-  font-size: 1.5rem;
 }
 .body {
   position: relative;
@@ -29,15 +28,32 @@
   border-radius: 2rem;
   display: flex;
   flex-direction: column;
+  padding: 2rem 1rem;
 }
 
 .result {
   text-align: end;
-  padding: 2rem 1rem 0;
+  padding: 4rem 1rem 0.5rem;
+  font-size: 2.5rem;
 }
 
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   padding: 0 1rem 2rem;
+  gap: 0.5rem;
+}
+
+.btn {
+  border: none;
+  outline: none;
+  padding: 0.7rem;
+  border-radius: 2.5rem;
+  font-size: 1.3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-grey {
 }
