--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,7 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-.body {
-  position: relative;
-}
+
 .container {
   max-width: 600px;
   max-height: 800px;
@@ -29,19 +27,22 @@
   display: flex;
   flex-direction: column;
   padding: 2rem 1rem;
+  background: var(--dark);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
 }
 
 .result {
   text-align: end;
   padding: 4rem 1rem 0.5rem;
   font-size: 2.5rem;
+  color: var(--white);
 }
 
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  padding: 0 1rem 2rem;
-  gap: 0.5rem;
+  padding: 0 1rem 1rem;
+  gap: 1rem;
 }
 
 .btn {
@@ -53,7 +54,27 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+.btn:hover {
+  background-color: #d4d4d2d2;
+}
+
+.btn:nth-child(17) {
+  grid-column-end: span 2;
 }
 
 .btn-grey {
+  color: var(--dark);
+  background-color: var(--grey-light);
+}
+.btn-num {
+  color: var(--white);
+  background: var(--grey-dark);
+}
+
+.btn-calc {
+  color: var(--white);
+  background: var(--orange);
 }
